Add tweaks to statically served html files

--- a/public/index.html
+++ b/public/index.html
@@ -39,23 +39,24 @@
               <ul class="list-unstyled chat-list mt-2 mb-0">
                 <li class="clearfix">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                    src="https://images.pexels.com/photos/8591614/pexels-photo-8591614.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Vincent Porter</div>
+                    <div class="name">Company Chit Chat</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> left 7 mins ago
+                      <i class="fa fa-circle offline"></i> left office 7 mins
+                      ago
                     </div>
                   </div>
                 </li>
                 <li class="clearfix active">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                    src="https://images.pexels.com/photos/3909438/pexels-photo-3909438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Aiden Chavez</div>
+                    <div class="name">Frontend Room</div>
                     <div class="status">
                       <i class="fa fa-circle online"></i> online
                     </div>
@@ -63,11 +64,11 @@
                 </li>
                 <li class="clearfix">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                    src="https://images.pexels.com/photos/3184338/pexels-photo-3184338.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Mike Thomas</div>
+                    <div class="name">Backend Room</div>
                     <div class="status">
                       <i class="fa fa-circle online"></i> online
                     </div>
@@ -75,23 +76,24 @@
                 </li>
                 <li class="clearfix">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                    src="https://images.pexels.com/photos/9553905/pexels-photo-9553905.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Christian Kelly</div>
+                    <div class="name">DevOps Room</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> left 10 hours ago
+                      <i class="fa fa-circle offline"></i> left office 30 mins
+                      back
                     </div>
                   </div>
                 </li>
                 <li class="clearfix">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar8.png"
+                    src="https://images.pexels.com/photos/7710144/pexels-photo-7710144.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Monica Ward</div>
+                    <div class="name">Marketing Room</div>
                     <div class="status">
                       <i class="fa fa-circle online"></i> online
                     </div>
@@ -99,13 +101,13 @@
                 </li>
                 <li class="clearfix">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                    src="https://images.pexels.com/photos/7648047/pexels-photo-7648047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                     alt="avatar"
                   />
                   <div class="about">
-                    <div class="name">Dean Henry</div>
+                    <div class="name">Q&A Room</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> offline since Oct 28
+                      <i class="fa fa-circle offline"></i> away on leave
                     </div>
                   </div>
                 </li>
@@ -121,13 +123,13 @@
                       data-target="#view_info"
                     >
                       <img
-                        src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                        src="https://images.pexels.com/photos/3909438/pexels-photo-3909438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                         alt="avatar"
                       />
                     </a>
                     <div class="chat-about">
-                      <h6 class="m-b-0">Aiden Chavez</h6>
-                      <small>Last seen: 2 hours ago</small>
+                      <h6 class="m-b-0">Frontend Room</h6>
+                      <small>Frontend related discussions</small>
                     </div>
                   </div>
                   <div class="col-lg-6 hidden-sm text-right">
@@ -155,25 +157,42 @@
               <div class="chat-history">
                 <ul class="m-b-0">
                   <li class="clearfix">
-                    <div class="message-data text-right">
-                      <span class="message-data-time">10:10 AM, Today</span>
+                    <div class="message-data">
                       <img
-                        src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                        src="https://bootdey.com/img/Content/avatar/avatar3.png"
                         alt="avatar"
                       />
-                    </div>
-                    <div class="message other-message float-right">
-                      Hi Aiden, how are you? How is the project coming along?
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <span class="message-data-time">10:12 AM, Today</span>
+                      <span class="message-data-time">10:00 AM, Today</span>
                     </div>
                     <div class="message my-message">Are we meeting today?</div>
                   </li>
                   <li class="clearfix">
                     <div class="message-data">
+                      <img
+                        src="https://bootdey.com/img/Content/avatar/avatar8.png"
+                        alt="avatar"
+                      />
+                      <span class="message-data-time">10:05 AM, Today</span>
+                    </div>
+                    <div class="message my-message">
+                      Probably not as Dennis is off
+                    </div>
+                  </li>
+                  <li class="clearfix">
+                    <div class="message-data text-right">
+                      <span class="message-data-time">10:10 AM, Today</span>
+                    </div>
+                    <div class="message other-message float-right">
+                      Hi Kyambadde, how are you? How is the portfolio project
+                      coming along?
+                    </div>
+                  </li>
+                  <li class="clearfix">
+                    <div class="message-data">
+                      <img
+                        src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                        alt="avatar"
+                      />
                       <span class="message-data-time">10:15 AM, Today</span>
                     </div>
                     <div class="message my-message">
