--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
                   <div class="about">
                     <div class="name">Company Chit Chat</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> left office 7 mins
-                      ago
+                      <i class="fa fa-circle offline"></i> busy
                     </div>
                   </div>
                 </li>
@@ -58,7 +57,7 @@
                   <div class="about">
                     <div class="name">Frontend Room</div>
                     <div class="status">
-                      <i class="fa fa-circle online"></i> online
+                      <i class="fa fa-circle online"></i> available
                     </div>
                   </div>
                 </li>
@@ -70,7 +69,7 @@
                   <div class="about">
                     <div class="name">Backend Room</div>
                     <div class="status">
-                      <i class="fa fa-circle online"></i> online
+                      <i class="fa fa-circle online"></i> available
                     </div>
                   </div>
                 </li>
@@ -82,8 +81,7 @@
                   <div class="about">
                     <div class="name">DevOps Room</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> left office 30 mins
-                      back
+                      <i class="fa fa-circle offline"></i> busy
                     </div>
                   </div>
                 </li>
@@ -95,7 +93,7 @@
                   <div class="about">
                     <div class="name">Marketing Room</div>
                     <div class="status">
-                      <i class="fa fa-circle online"></i> online
+                      <i class="fa fa-circle online"></i> available
                     </div>
                   </div>
                 </li>
@@ -107,7 +105,7 @@
                   <div class="about">
                     <div class="name">Q&A Room</div>
                     <div class="status">
-                      <i class="fa fa-circle offline"></i> away on leave
+                      <i class="fa fa-circle offline"></i> busy
                     </div>
                   </div>
                 </li>
@@ -162,7 +160,10 @@
                         src="https://bootdey.com/img/Content/avatar/avatar3.png"
                         alt="avatar"
                       />
-                      <span class="message-data-time">10:00 AM, Today</span>
+                      <div class="person-about">
+                        <span class="message-data-time">Jacent, 10:00 AM</span>
+                        <span><i class="fa fa-circle online"></i> online</span>
+                      </div>
                     </div>
                     <div class="message my-message">Are we meeting today?</div>
                   </li>
@@ -172,18 +173,29 @@
                         src="https://bootdey.com/img/Content/avatar/avatar8.png"
                         alt="avatar"
                       />
-                      <span class="message-data-time">10:05 AM, Today</span>
+
+                      <div class="person-about">
+                        <span class="message-data-time">Becky, 10:05 AM</span>
+                        <span><i class="fa fa-circle online"></i> online</span>
+                      </div>
                     </div>
                     <div class="message my-message">
                       Probably not as Dennis is off
                     </div>
                   </li>
                   <li class="clearfix">
-                    <div class="message-data text-right">
-                      <span class="message-data-time">10:10 AM, Today</span>
+                    <div class="message-data message-data-right text-right">
+                      <img
+                        src="https://bootdey.com/img/Content/avatar/avatar5.png"
+                        alt="avatar"
+                      />
+                      <div class="person-about">
+                        <span class="message-data-time">Daniel, 10:10 AM</span>
+                        <span><i class="fa fa-circle online"></i> online</span>
+                      </div>
                     </div>
                     <div class="message other-message float-right">
-                      Hi Kyambadde, how are you? How is the portfolio project
+                      Hi Arthur, how are you? How is the portfolio project
                       coming along?
                     </div>
                   </li>
@@ -193,11 +205,17 @@
                         src="https://bootdey.com/img/Content/avatar/avatar2.png"
                         alt="avatar"
                       />
-                      <span class="message-data-time">10:15 AM, Today</span>
+                      <div class="person-about">
+                        <span class="message-data-time">Arthur, 10:15 AM</span>
+                        <span
+                          ><i class="fa fa-circle offline"></i> away on
+                          leave</span
+                        >
+                      </div>
                     </div>
                     <div class="message my-message">
-                      Project has been already finished and I have results to
-                      show you.
+                      Project has already been finished and I have results to
+                      show you when I get back.
                     </div>
                   </li>
                 </ul>
