Add account picture

--- a/public/index.html
+++ b/public/index.html
@@ -130,25 +130,11 @@
                       <small>Frontend related discussions</small>
                     </div>
                   </div>
-                  <div class="col-lg-6 hidden-sm text-right">
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-outline-secondary"
-                      ><i class="fa fa-camera"></i
-                    ></a>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-outline-primary"
-                      ><i class="fa fa-image"></i
-                    ></a>
-                    <a href="javascript:void(0);" class="btn btn-outline-info"
-                      ><i class="fa fa-cogs"></i
-                    ></a>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-outline-warning"
-                      ><i class="fa fa-question"></i
-                    ></a>
+                  <div class="col-lg-6 hidden-sm text-right profile">
+                    <img
+                      src="https://bootdey.com/img/Content/avatar/avatar5.png"
+                      alt="avatar"
+                    />
                   </div>
                 </div>
               </div>
