Add separation in auth html and chat html

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <!--  This file has been downloaded from bootdey.com @bootdey on twitter -->
-    <!--  All snippets are MIT license http://bootdey.com/license -->
-    <title>chat app - Bootdey.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ChatApp - Daniel's attempt to a chat room</title>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -18,218 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <link
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-
-    <div class="container">
-      <div class="row clearfix">
-        <div class="col-lg-12">
-          <div class="card chat-app">
-            <div id="plist" class="people-list">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"
-                    ><i class="fa fa-search"></i
-                  ></span>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Search..."
-                />
-              </div>
-              <ul class="list-unstyled chat-list mt-2 mb-0">
-                <li class="clearfix">
-                  <img
-                    src="https://images.pexels.com/photos/8591614/pexels-photo-8591614.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Company Chit Chat</div>
-                    <div class="status">
-                      <i class="fa fa-circle offline"></i> busy
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix active">
-                  <img
-                    src="https://images.pexels.com/photos/3909438/pexels-photo-3909438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Frontend Room</div>
-                    <div class="status">
-                      <i class="fa fa-circle online"></i> available
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix">
-                  <img
-                    src="https://images.pexels.com/photos/3184338/pexels-photo-3184338.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Backend Room</div>
-                    <div class="status">
-                      <i class="fa fa-circle online"></i> available
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix">
-                  <img
-                    src="https://images.pexels.com/photos/9553905/pexels-photo-9553905.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">DevOps Room</div>
-                    <div class="status">
-                      <i class="fa fa-circle offline"></i> busy
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix">
-                  <img
-                    src="https://images.pexels.com/photos/7710144/pexels-photo-7710144.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Marketing Room</div>
-                    <div class="status">
-                      <i class="fa fa-circle online"></i> available
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix">
-                  <img
-                    src="https://images.pexels.com/photos/7648047/pexels-photo-7648047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Q&A Room</div>
-                    <div class="status">
-                      <i class="fa fa-circle offline"></i> busy
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="chat">
-              <div class="chat-header clearfix">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <a
-                      href="javascript:void(0);"
-                      data-toggle="modal"
-                      data-target="#view_info"
-                    >
-                      <img
-                        src="https://images.pexels.com/photos/3909438/pexels-photo-3909438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                        alt="avatar"
-                      />
-                    </a>
-                    <div class="chat-about">
-                      <h6 class="m-b-0">Frontend Room</h6>
-                      <small>Frontend related discussions</small>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 hidden-sm text-right profile">
-                    <img
-                      src="https://bootdey.com/img/Content/avatar/avatar5.png"
-                      alt="avatar"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="chat-history">
-                <ul class="m-b-0">
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <img
-                        src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                        alt="avatar"
-                      />
-                      <div class="person-about">
-                        <span class="message-data-time">Jacent, 10:00 AM</span>
-                        <span><i class="fa fa-circle online"></i> online</span>
-                      </div>
-                    </div>
-                    <div class="message my-message">Are we meeting today?</div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <img
-                        src="https://bootdey.com/img/Content/avatar/avatar8.png"
-                        alt="avatar"
-                      />
-
-                      <div class="person-about">
-                        <span class="message-data-time">Becky, 10:05 AM</span>
-                        <span><i class="fa fa-circle online"></i> online</span>
-                      </div>
-                    </div>
-                    <div class="message my-message">
-                      Probably not as Dennis is off
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data message-data-right text-right">
-                      <img
-                        src="https://bootdey.com/img/Content/avatar/avatar5.png"
-                        alt="avatar"
-                      />
-                      <div class="person-about">
-                        <span class="message-data-time">Daniel, 10:10 AM</span>
-                        <span><i class="fa fa-circle online"></i> online</span>
-                      </div>
-                    </div>
-                    <div class="message other-message float-right">
-                      Hi Arthur, how are you? How is the portfolio project
-                      coming along?
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <img
-                        src="https://bootdey.com/img/Content/avatar/avatar2.png"
-                        alt="avatar"
-                      />
-                      <div class="person-about">
-                        <span class="message-data-time">Arthur, 10:15 AM</span>
-                        <span
-                          ><i class="fa fa-circle offline"></i> away on
-                          leave</span
-                        >
-                      </div>
-                    </div>
-                    <div class="message my-message">
-                      Project has already been finished and I have results to
-                      show you when I get back.
-                    </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="chat-message clearfix">
-                <div class="input-group mb-0">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"
-                      ><i class="fa fa-send"></i
-                    ></span>
-                  </div>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Enter text here..."
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    <h1>Chat Auth</h1>
     <link href="./css/main.css" rel="stylesheet" />
   </body>
 </html>
