--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,65 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <h1>Chat Auth</h1>
-    <link href="./css/main.css" rel="stylesheet" />
+    <div class="box">
+      <form>
+        <h2>Sign Up</h2>
+        <fieldset>
+          <legend>Personal</legend>
+        </fieldset>
+        <div>
+          <label>Nick Name</label>
+          <input
+            type="text"
+            name="nick_name"
+            placeholder="Enter your platform name here"
+            required="true"
+          />
+        </div>
+        <div>
+          <label>Password</label>
+          <input
+            type="password"
+            name="password"
+            placeholder="Enter your password here"
+            required="true"
+          />
+        </div>
+        <fieldset>
+          <legend>Profile</legend>
+        </fieldset>
+        <div>
+          <label>First Name</label>
+          <input
+            type="text"
+            name="firstName"
+            placeholder="Enter your first name here"
+            required="true"
+          />
+        </div>
+        <div>
+          <label>Last Name</label>
+          <input
+            type="text"
+            name="lastName"
+            placeholder="Enter your last name here"
+            required="true"
+          />
+        </div>
+        <div>
+          <label>Phone Number</label>
+          <input
+            type="tel"
+            name="phone"
+            placeholder="Phone Number"
+            required="true"
+          />
+        </div>
+        <button>Submit</button>
+      </form>
+    </div>
+    <link href="./css/auth.css" rel="stylesheet" />
   </body>
 </html>
